# tpp

./: .clang-format  CMakeLists.txt
examples/pathtracer/: camera.t++  color.t++  common.t++  hittable.t++  hittable_list.t++  interval.t++  main.t++  material.t++  ray.t++  sphere.t++  vec3.t++
examples/simple/: donut.t++  fib.t++  ghost.t++  mandel.t++  test.t++
examples/std/: cstdio.t++  image.t++  std.t++
include/TPP/: Environment.hpp  Expression.hpp  Function.hpp  Name.hpp  Parser.hpp  SourceLocation.hpp  TPP.hpp  Token.hpp  Type.hpp  Value.hpp
include/TPP/Backend/: Builder.hpp  Value.hpp
include/TPP/Frontend/: Arg.hpp  Expression.hpp  Frontend.hpp  Name.hpp  Parser.hpp  SourceLocation.hpp  StructElement.hpp  StructField.hpp  TPP.hpp  Token.hpp  Type.hpp
include/tpp/: TPP.hpp
src/: environment.cpp  error.cpp  expression.cpp  main.cpp  name.cpp  parser.cpp  source_location.cpp  type.cpp  value.cpp
src/backend/: builder.cpp  value.cpp
src/frontend/: arg.cpp  error.cpp  expression.cpp  main.cpp  name.cpp  parser.cpp  source_location.cpp  struct_element.cpp  struct_field.cpp  type.cpp
